Fixed bug #61025 (__invoke() visibility not honored)

- check visibility of __invoke when calling
- make is_callable consist
- Add the ZEND_ACC_CLOSURE flag to the closure created with: zend_create_closure()