Zend/zend_vm_execute.h
@@ -1256,6 +1256,17 @@ static int ZEND_FASTCALL  ZEND_INIT_FCALL_BY_NAME_SPEC_CONST_HANDLER(ZEND_OPCODE
 		    EXPECTED(Z_TYPE_P(function_name) == IS_OBJECT) &&
 			Z_OBJ_HANDLER_P(function_name, get_closure) &&
 			Z_OBJ_HANDLER_P(function_name, get_closure)(function_name, &call->called_scope, &call->fbc, &call->object TSRMLS_CC) == SUCCESS) {
+			if (!(call->fbc->common.fn_flags & (ZEND_ACC_PUBLIC | ZEND_ACC_CLOSURE))) {
+				if (call->fbc->common.fn_flags & ZEND_ACC_PRIVATE) {
+					if (UNEXPECTED(call->called_scope != EG(scope))) {
+						zend_error_noreturn(E_ERROR, "Call to private %s::__invoke() from context '%s'", Z_OBJCE_P(function_name)->name, EG(scope) ? EG(scope)->name : "");
+					}
+				} else if ((call->fbc->common.fn_flags & ZEND_ACC_PROTECTED)) {
+					if (UNEXPECTED(!zend_check_protected(zend_get_function_root_class(call->fbc), EG(scope)))) {
+						zend_error_noreturn(E_ERROR, "Call to protected %s::__invoke() from context '%s'", Z_OBJCE_P(function_name)->name, EG(scope) ? EG(scope)->name : "");
+					}
+				}
+			}
 			if (call->object) {
 				Z_ADDREF_P(call->object);
 			}
@@ -1583,6 +1594,17 @@ static int ZEND_FASTCALL  ZEND_INIT_FCALL_BY_NAME_SPEC_TMP_HANDLER(ZEND_OPCODE_H
 		    EXPECTED(Z_TYPE_P(function_name) == IS_OBJECT) &&
 			Z_OBJ_HANDLER_P(function_name, get_closure) &&
 			Z_OBJ_HANDLER_P(function_name, get_closure)(function_name, &call->called_scope, &call->fbc, &call->object TSRMLS_CC) == SUCCESS) {
+			if (!(call->fbc->common.fn_flags & (ZEND_ACC_PUBLIC | ZEND_ACC_CLOSURE))) {
+				if (call->fbc->common.fn_flags & ZEND_ACC_PRIVATE) {
+					if (UNEXPECTED(call->called_scope != EG(scope))) {
+						zend_error_noreturn(E_ERROR, "Call to private %s::__invoke() from context '%s'", Z_OBJCE_P(function_name)->name, EG(scope) ? EG(scope)->name : "");
+					}
+				} else if ((call->fbc->common.fn_flags & ZEND_ACC_PROTECTED)) {
+					if (UNEXPECTED(!zend_check_protected(zend_get_function_root_class(call->fbc), EG(scope)))) {
+						zend_error_noreturn(E_ERROR, "Call to protected %s::__invoke() from context '%s'", Z_OBJCE_P(function_name)->name, EG(scope) ? EG(scope)->name : "");
+					}
+				}
+			}
 			if (call->object) {
 				Z_ADDREF_P(call->object);
 			}
@@ -1770,6 +1792,17 @@ static int ZEND_FASTCALL  ZEND_INIT_FCALL_BY_NAME_SPEC_VAR_HANDLER(ZEND_OPCODE_H
 		    EXPECTED(Z_TYPE_P(function_name) == IS_OBJECT) &&
 			Z_OBJ_HANDLER_P(function_name, get_closure) &&
 			Z_OBJ_HANDLER_P(function_name, get_closure)(function_name, &call->called_scope, &call->fbc, &call->object TSRMLS_CC) == SUCCESS) {
+			if (!(call->fbc->common.fn_flags & (ZEND_ACC_PUBLIC | ZEND_ACC_CLOSURE))) {
+				if (call->fbc->common.fn_flags & ZEND_ACC_PRIVATE) {
+					if (UNEXPECTED(call->called_scope != EG(scope))) {
+						zend_error_noreturn(E_ERROR, "Call to private %s::__invoke() from context '%s'", Z_OBJCE_P(function_name)->name, EG(scope) ? EG(scope)->name : "");
+					}
+				} else if ((call->fbc->common.fn_flags & ZEND_ACC_PROTECTED)) {
+					if (UNEXPECTED(!zend_check_protected(zend_get_function_root_class(call->fbc), EG(scope)))) {
+						zend_error_noreturn(E_ERROR, "Call to protected %s::__invoke() from context '%s'", Z_OBJCE_P(function_name)->name, EG(scope) ? EG(scope)->name : "");
+					}
+				}
+			}
 			if (call->object) {
 				Z_ADDREF_P(call->object);
 			}
@@ -1995,6 +2028,17 @@ static int ZEND_FASTCALL  ZEND_INIT_FCALL_BY_NAME_SPEC_CV_HANDLER(ZEND_OPCODE_HA
 		    EXPECTED(Z_TYPE_P(function_name) == IS_OBJECT) &&
 			Z_OBJ_HANDLER_P(function_name, get_closure) &&
 			Z_OBJ_HANDLER_P(function_name, get_closure)(function_name, &call->called_scope, &call->fbc, &call->object TSRMLS_CC) == SUCCESS) {
+			if (!(call->fbc->common.fn_flags & (ZEND_ACC_PUBLIC | ZEND_ACC_CLOSURE))) {
+				if (call->fbc->common.fn_flags & ZEND_ACC_PRIVATE) {
+					if (UNEXPECTED(call->called_scope != EG(scope))) {
+						zend_error_noreturn(E_ERROR, "Call to private %s::__invoke() from context '%s'", Z_OBJCE_P(function_name)->name, EG(scope) ? EG(scope)->name : "");
+					}
+				} else if ((call->fbc->common.fn_flags & ZEND_ACC_PROTECTED)) {
+					if (UNEXPECTED(!zend_check_protected(zend_get_function_root_class(call->fbc), EG(scope)))) {
+						zend_error_noreturn(E_ERROR, "Call to protected %s::__invoke() from context '%s'", Z_OBJCE_P(function_name)->name, EG(scope) ? EG(scope)->name : "");
+					}
+				}
+			}
 			if (call->object) {
 				Z_ADDREF_P(call->object);
 			}
